JumpScript/tests/baselines/reference/ES5For-ofTypeCheck7.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck7.jump(2,15): error TS2461: Type 'number' is not an array type.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck7.jump (1 errors) ====
    var union: string | number;
    for (var v of union) { }
                  ~~~~~
!!! error TS2461: Type 'number' is not an array type.